--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -137,10 +137,10 @@
                                       Command="{Binding DeleteDataInRows}"
                                       CommandParameter="{Binding SelectedForms}"
                                       HotKey="Ctrl+K"/>
-                            <!--<MenuItem Header="Перевести РВ в РАО        Ctrl+J"
+                            <MenuItem Header="Перевести РВ в РАО        Ctrl+J"
                                       Command="{Binding SourceTransmission}"
-                                      CommandParameter="{Binding SelectedForms}"
-                                      HotKey="Ctrl+J"/>-->
+                                      CommandParameter="{Binding SelectedForm}"
+                                      HotKey="Ctrl+J"/>
                         </ContextMenu>
                     </Grid.ContextMenu>
                     <Grid Classes="tableHeader" Grid.Row="0"
