--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -245,9 +245,17 @@
                             <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms12, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="1"
-                                                Binding="{Binding NumberInOrder.Value}"
-                                                IsReadOnly="True"/>
+
+                            <DataGridTemplateColumn Header="1">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                        <TextBlock  HorizontalAlignment="Center" 
+                                                    VerticalAlignment="Center"
+                                                    Text="{Binding NumberInOrder.Value, Mode=TwoWay}"/>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+
 
                             <DataGridTemplateColumn Header="2">
                                 <DataGridTemplateColumn.CellTemplate>
