--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -138,6 +138,7 @@
             <Setter Property="Margin" Value="3"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
+			<Setter Property="Watermark" Value="&lt;дд.мм.гггг&gt;"/>
         </Style>
         <!--PageControl-->
         <Style Selector="Grid.pageControlContainer">
