--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -9,7 +9,6 @@
 	xmlns:local="using:Client_App.Behaviors"
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
 	xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
-    xmlns:forms="clr-namespace:Models.Forms.Form1;assembly=Models"
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
     d:DesignWidth="900"
@@ -100,9 +99,9 @@
 		    </Expander>
 
 			<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
-				<Grid RowDefinitions="Auto,*" ColumnDefinitions="Auto">
+				<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
                     <Grid.ContextMenu>
-                        <ContextMenu>
+                        <ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
                             <MenuItem Header="Выделить всё				Ctrl+A"
                                       Command="{Binding SelectAll}"
                                       HotKey="Ctrl+A"/>
@@ -114,18 +113,18 @@
                                       HotKey="Ctrl+N"/>
                             <MenuItem Header="Добавить N строк перед	Ctrl+I"
                                       Command="{Binding AddRowsIn}"
-                                      CommandParameter="{Binding SelectedForms12}"
+                                      CommandParameter="{Binding SelectedForms}"
                                       HotKey="Ctrl+I"/>
                             <MenuItem Header="Копировать				Ctrl+C"
                                       Command="{Binding CopyRows}"
-                                      CommandParameter="{Binding SelectedForms12}"
+                                      CommandParameter="{Binding SelectedForms}"
                                       HotKey="Ctrl+C"/>
                             <MenuItem Header="Вставить					Ctrl+V"
                                       Command="{Binding PasteRows}"
                                       HotKey="Ctrl+V"/>
                             <MenuItem Header="Удалить выбранные строчки	Ctrl+D"
                                       Command="{Binding DeleteRows}"
-                                      CommandParameter="{Binding SelectedForms12}"
+                                      CommandParameter="{Binding SelectedForms}"
                                       HotKey="Ctrl+D"/>
                             <MenuItem Header="Выставить номер			Ctrl+O"
                                       Command="{Binding SetNumberOrder}"
@@ -135,11 +134,11 @@
                                       HotKey="Ctrl+L"/>
                             <MenuItem Header="Очистить строчки	        Ctrl+K"
                                       Command="{Binding DeleteDataInRows}"
-                                      CommandParameter="{Binding SelectedForms12}"
+                                      CommandParameter="{Binding SelectedForms}"
                                       HotKey="Ctrl+K"/>
                             <MenuItem Header="Перевести РВ в РАО        Ctrl+J"
                                       Command="{Binding SourceTransmission}"
-                                      CommandParameter="{Binding SelectedForm12}"
+                                      CommandParameter="{Binding SelectedForm}"
                                       HotKey="Ctrl+J"/>
                         </ContextMenu>
                     </Grid.ContextMenu>
@@ -237,52 +236,45 @@
                         Grid.Row="1"
                         Classes="table"
 						x:Name="dataGrid"
-						Items="{Binding Form12List}"
-                        SelectedItem="{Binding SelectedForm12}">
+						Items="{Binding FormList}"
+                        SelectedItem="{Binding SelectedForm}">
                         <interactivity:Interaction.Behaviors>
                             <local:DataGridDragSelectionBehavior/>
-                            <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms12, Mode=TwoWay}" />
+                            <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
                         <DataGrid.Columns>
-
-                            <DataGridTemplateColumn Header="1">
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBlock  HorizontalAlignment="Center" 
-                                                    VerticalAlignment="Center"
-                                                    Text="{Binding NumberInOrder.Value, Mode=TwoWay}"/>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
-
+                            <DataGridTextColumn Header="1"
+                                                Binding="{Binding NumberInOrder.Value}"
+                                                IsReadOnly="True"/>
 
                             <DataGridTemplateColumn Header="2">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
-                                        <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"></TextBox>
+                                    <DataTemplate>
+                                        <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"
+												 ContextMenu="{Binding #Table.ContextMenu}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
                             <DataGridTemplateColumn Header="3">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <CalendarDatePicker SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="4">
+                            <DataGridTemplateColumn Header="4" Width="80">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="5">
+                            <DataGridTemplateColumn Header="5"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -290,23 +282,23 @@
 
                             <DataGridTemplateColumn Header="6">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="7">
+                            <DataGridTemplateColumn Header="7"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding Mass.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="8">
+                            <DataGridTemplateColumn Header="8"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -314,32 +306,32 @@
 
                             <DataGridTemplateColumn Header="9">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <CalendarDatePicker SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
                             <DataGridTemplateColumn
-											Header="10">
+												Header="10">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="11">
+                            <DataGridTemplateColumn Header="11"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="12">
+                            <DataGridTemplateColumn Header="12"  Width="110">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding Owner.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -347,7 +339,7 @@
 
                             <DataGridTemplateColumn Header="13">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -355,7 +347,7 @@
 
                             <DataGridTemplateColumn Header="14">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -363,31 +355,31 @@
 
                             <DataGridTemplateColumn Header="15">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="16">
+                            <DataGridTemplateColumn Header="16" Width="110">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="17">
+                            <DataGridTemplateColumn Header="17" Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
 
-                            <DataGridTemplateColumn Header="18">
+                            <DataGridTemplateColumn Header="18" Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding PackName.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -395,7 +387,7 @@
 
                             <DataGridTemplateColumn Header="19">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding PackType.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -403,7 +395,7 @@
 
                             <DataGridTemplateColumn Header="20">
                                 <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Form12">
+                                    <DataTemplate>
                                         <TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
