Add ContextMenu for Textboxes

--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -133,7 +133,8 @@
         <Style Selector="DataGrid.table TextBox">
             <Setter Property="Margin" Value="3"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
-        </Style>
+			<Setter Property="IsHitTestVisible" Value="False"/>
+		</Style>
         <Style Selector="DataGrid.table CalendarDatePicker">
             <Setter Property="Margin" Value="3"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
