--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -104,6 +104,7 @@
                         <ContextMenu DataContext="{Binding DataContext, ElementName=dataGrid}">
                             <MenuItem Header="Выделить всё				Ctrl+A"
                                       Command="{Binding SelectAll}"
+									  IsHitTestVisible="True"
                                       HotKey="Ctrl+A"/>
                             <MenuItem Header="Добавить строку			Ctrl+T"
                                       Command="{Binding AddRow}"
@@ -113,12 +114,13 @@
                                       HotKey="Ctrl+N"/>
                             <MenuItem Header="Добавить N строк перед	Ctrl+I"
                                       Command="{Binding AddRowsIn}"
-                                      CommandParameter="{Binding SelectedForms}"
+                                      CommandParameter="{Binding SelectedForms12}"
                                       HotKey="Ctrl+I"/>
                             <MenuItem Header="Копировать				Ctrl+C"
                                       Command="{Binding CopyRows}"
-                                      CommandParameter="{Binding SelectedForms}"
+                                      CommandParameter="{Binding SelectedForms12}"
                                       HotKey="Ctrl+C"/>
+	
                             <MenuItem Header="Вставить					Ctrl+V"
                                       Command="{Binding PasteRows}"
                                       HotKey="Ctrl+V"/>
@@ -241,6 +243,7 @@
                         <interactivity:Interaction.Behaviors>
                             <local:DataGridDragSelectionBehavior/>
                             <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
+						    <local:DataGridDoubleClickBehavior />
 						</interactivity:Interaction.Behaviors>
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="1"
@@ -250,8 +253,7 @@
                             <DataGridTemplateColumn Header="2">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"
-												 ContextMenu="{Binding #Table.ContextMenu}"></TextBox>
+                                        <TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -267,7 +269,7 @@
                             <DataGridTemplateColumn Header="4" Width="80">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -275,7 +277,7 @@
                             <DataGridTemplateColumn Header="5"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -283,7 +285,7 @@
                             <DataGridTemplateColumn Header="6">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -291,7 +293,7 @@
                             <DataGridTemplateColumn Header="7"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding Mass.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding Mass.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -299,7 +301,7 @@
                             <DataGridTemplateColumn Header="8"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -316,7 +318,7 @@
 												Header="10">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -324,7 +326,7 @@
                             <DataGridTemplateColumn Header="11"  Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -332,7 +334,7 @@
                             <DataGridTemplateColumn Header="12"  Width="110">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding Owner.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -340,7 +342,8 @@
                             <DataGridTemplateColumn Header="13">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"
+												 ></TextBox>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -348,7 +351,7 @@
                             <DataGridTemplateColumn Header="14">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -364,7 +367,7 @@
                             <DataGridTemplateColumn Header="16" Width="110">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -372,7 +375,7 @@
                             <DataGridTemplateColumn Header="17" Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -380,7 +383,7 @@
                             <DataGridTemplateColumn Header="18" Width="100">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding PackName.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -388,7 +391,7 @@
                             <DataGridTemplateColumn Header="19">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding PackType.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -396,7 +399,7 @@
                             <DataGridTemplateColumn Header="20">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"></TextBox>
+                                        <TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
