--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -20,6 +20,40 @@
 
     <Window.Resources>
 		<converter:DateConverter x:Key="DateConverter"/>
+		
+		<!-- Стиль для Expander без анимации -->
+		<Style x:Key="NoAnimationExpander" TargetType="Expander">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="Expander">
+						<Border Background="{TemplateBinding Background}"
+								BorderBrush="{TemplateBinding BorderBrush}"
+								BorderThickness="{TemplateBinding BorderThickness}">
+							<Grid>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="*"/>
+								</Grid.RowDefinitions>
+								
+								<!-- Заголовок -->
+								<ToggleButton x:Name="PART_toggle"
+											  Grid.Row="0"
+											  IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+											  Content="{TemplateBinding Header}"
+											  HorizontalAlignment="Stretch"
+											  HorizontalContentAlignment="Left"/>
+								
+								<!-- Содержимое без анимации -->
+								<ContentPresenter x:Name="PART_content"
+												  Grid.Row="1"
+												  Content="{TemplateBinding Content}"
+												  IsVisible="{TemplateBinding IsExpanded}"/>
+							</Grid>
+						</Border>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
     </Window.Resources>
 
     <Design.DataContext>
@@ -36,7 +70,8 @@
 			</Grid.RowDefinitions>
 			
 			<Expander Grid.Row ="0"
-					  IsExpanded="True">
+					  IsExpanded="True"
+					  Style="{StaticResource NoAnimationExpander}">
 				<Expander.Header>
 					Скрыть/Раскрыть верхнюю панель
 				</Expander.Header>
@@ -443,7 +478,8 @@
 
 			<Expander Grid.Row ="3"
 					  IsExpanded="True"
-					  ExpandDirection="Up">
+					  ExpandDirection="Up"
+					  Style="{StaticResource NoAnimationExpander}">
 				<Expander.Header>
 					Скрыть/Раскрыть нижнюю панель
 				</Expander.Header>
