--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -121,13 +121,13 @@
             <Setter Property="AlternatingRowBackground" Value="LightBlue"/>
             <Setter Property="Margin" Value="5,-5,5,5"/>
             <Setter Property="SelectionMode" Value="Extended"/>
-            <Setter Property="GridLinesVisibility" Value="Vertical"/>
+            <Setter Property="GridLinesVisibility" Value="All"/>
             <Setter Property="CanUserSortColumns" Value="False"/>
             <Setter Property="ColumnWidth" Value="Auto" />
             <Setter Property="MinColumnWidth" Value="50" />
             <Setter Property="MaxColumnWidth" Value="250" />
         </Style>
-        <Style Selector="DataGrid.table DataGridRow:selected TextBox">
+        <Style Selector="DataGrid DataGridRow:selected TextBox">
             <Setter Property="Foreground" Value="Black"/>
         </Style>
         <Style Selector="DataGrid.table TextBox">
@@ -155,12 +155,18 @@
         <Style Selector="DataGrid.notesTable">
             <Setter Property="Width" Value="650"/>
             <Setter Property="MaxHeight" Value="180"/>
-			<Setter Property="RowHeight" Value="30" />
+			<Setter Property="RowHeight" Value="35" />
             <Setter Property="RowBackground" Value="White"/>
 			<Setter Property="SelectionMode" Value="Extended"/>
             <Setter Property="AlternatingRowBackground" Value="LightBlue"/>
             <Setter Property="Margin" Value="5"/>
+			<Setter Property="GridLinesVisibility" Value="All"></Setter>
         </Style>
+		<Style Selector="DataGrid.notesTable TextBox">
+			<Setter Property="Margin" Value="3"/>
+			<Setter Property="VerticalContentAlignment" Value="Center"/>
+			<Setter Property="IsHitTestVisible" Value="False"/>
+		</Style>
         <!--Конец стилей для окон редактирования форм-->
     </Application.Styles>
 </Application>
